tests/sumo/tls/wauts/errors/cross3ltl_error_missing_wautid/errors.sumo
Error: Attribute 'id' is missing in definition of a WAUT.
Quitting (on error).
